--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,16 @@ body {
   color: tomato;
 }
 
+.ganhadores .TW h2::after{
+  content: ':Turing_Awards</Winner>';
+  margin-left: 5px;
+}
+
+.ganhadores .NB h2::after{
+  content: ':Nobel_prize</Winner>';
+  margin-left: 5px;
+}
+
 .ganhadores h2::before {
   content: '';
   display: inline-block;
