--- a/css/style.css
+++ b/css/style.css
@@ -331,9 +331,8 @@ body {
 
 .alunos{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  align-items: center;
+  grid-template-columns: repeat(3, 1fr);
+  
 }
 
 .aluno1{
